--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "7.0.6",
+    "com.unity.2d.psdimporter": "6.0.4",
     "com.unity.cinemachine": "2.8.6",
     "com.unity.collab-proxy": "1.15.13",
     "com.unity.ide.rider": "3.0.12",
