--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "com.unity.2d.animation": "7.0.6",
+    "com.unity.2d.pixel-perfect": "2.1.0",
     "com.unity.2d.psdimporter": "6.0.4",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.spriteshape": "3.0.14",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.cinemachine": "2.9.1",
     "com.unity.collab-proxy": "1.15.13",
